Fix wrong font formatting & solve "foundations/03"

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,7 +2,7 @@ p {
     background-color: lightcoral;
 }
 .class {
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 .cooler {
